syntax = "proto3";
package proto;
option go_package = "pkg/grpc/proto";

service GameService {
    // GetBySlug returns latest published game by slug
    rpc GetBySlug(GetBySlugRequest) returns (GameResponse) {}

    // GetByID returns latest published game by slug
    rpc GetByID(GetByIDRequest) returns (GameResponse) {}

    // GetByFilter returns latest published games by filter
    rpc GetByFilter(GetByFilterRequest) returns (GamesResponse) {}
}

message GetBySlugRequest {
    string slug = 1;
}

message GetByIDRequest {
    string gameID = 1;
}

message GetByFilterRequest {
    repeated uint64 genres = 1;
    repeated string platforms = 2;
    repeated uint64 features = 3;
    repeated string languages = 4;
    string title = 5;
    bool onlyPublished = 6;
    bool sortByReleaseDate = 7;
    bool sortByBestSales = 8;
    uint32 offset = 9;
    uint32 limit = 10;
}

message GameResponse {
    Game game = 1;
}

message GamesResponse {
    repeated Game games = 1;
}

message Game {
    string ID = 1;
    string title = 2;
    string type = 3;
    uint64 revisionID = 4;
    string summary = 5;
    string description = 6;
    string slug = 7;
    string license = 8;
    repeated string platforms = 9;
    repeated Tag tags = 10;
    repeated Feature features = 11;
    repeated Developer developers = 12;
    repeated Genre genres = 13;
    repeated Publisher publishers = 14;
    repeated SystemRequirements systemRequirements = 15;
    repeated Localization localizations = 16;
    string trailer = 17;
    repeated SocialLink socialLinks = 18;
    repeated Rating rating = 19;
    repeated Media media = 20;
    repeated Review reviews = 21;
    uint32 playTime = 22;
    string releaseDate = 23;
}

message Media {
    string type = 1;
    string url = 2;
}

message Tag {
    uint64 ID = 1;
    string name = 2;
}

message Developer {
    uint64 ID = 1;
    string name = 2;
}

message Feature {
    uint64 ID = 1;
    string name = 2;
    string icon = 3;
}

message Genre {
    uint64 ID = 1;
    string name = 2;
}

message Publisher {
    uint64 ID = 1;
    string name = 2;
}

message SystemRequirements {
    string platform = 1;
    RequirementsSet minimal = 2;
    RequirementsSet recommended = 3;
}

message RequirementsSet {
    string CPU = 1;
    string GPU = 2;
    uint32 DiskSpace = 3;
    uint32 RAM = 4;
    string OS = 5;
}

message Localization {
    string Language = 1;
    bool Interface = 2;
    bool Audio = 3;
    bool Subtitles = 4;
}

message SocialLink {
    string type = 1;
    string url = 2;
}

message Rating {
    string Agency = 1;
    string Rating = 2;
    bool DisplayOnlineNotice = 3;
    bool ShowAgeRestrict = 4;
}

message Review {
    string PressName = 1;
    string Link = 2;
    uint32 Score = 3;
    string Quote = 4;
}